Fix scrollbar

--- a/Resources/public/css/list.css
+++ b/Resources/public/css/list.css
@@ -3,8 +3,11 @@
  */
  
  /* Scroll results list horizontally if the columns don't fit on the screen */
-.results-list {
+.results-list-wrapper {
     position: relative;
+}
+
+.results-list {
     overflow-x: auto;
     padding-top: 12px; /* make rook for scrollbar */
 }
